# SaleTech

./: .gitignore  README.md  demo_logger_test.py  project_structure.py  pyproject.toml  stt_eval_results.json  test_logger_dir.py  tmp_import_torchcodec.py
config/: settings.py
experiments/stt_eval/: README.md
experiments/stt_eval/data/: download_dataset.py  preprocess.py
experiments/stt_eval/eval/: eval.py  metrics.py  push_to_talk.py  run_eval.py  schema.py
experiments/stt_eval/models/: __init__.py  base,py  base.py  nemo.py  vakyansh.py  whisper.py
scripts/: transcribe_file.py
src/saletech/: main.py
src/saletech/api/: audio_debug.py  exception_handler.py  health.py  sessions.py  transcriber.py
src/saletech/core/: audio_state.py  session.py  session_manager.py  session_state.py  vad_state.py
src/saletech/media/: audio_buffer.py  constants.py  frame_ingress.py  speech_window.py  vad_model.py
src/saletech/media/buffer/: StreamingVadBuffer.py  frame_chunking.py
src/saletech/media/vad/: vad_model.py  vad_state.py
src/saletech/models/: schemas.py
src/saletech/services/: llm.py  streaming_asr.py  vad_adv.py  vad_adv_service.py
src/saletech/transcriber/: pipeline.py  session.py  writer.py
src/saletech/utils/: errors.py  lifespan.py  logger.py
tests/: test_errors.py  test_vad_pipeline.py
